<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MainActivity"
        android:fillViewport="true">

        <!-- Since LinearLayout places views either vertically or horizontally,
        in vertical LinearLayout in this case, by construction, each inside child view
        can only have layout_gravity left, right, and center (only horizontal), but here the Next Button would
        look good if placed in the bottom, right corner and there is need of nesting another
        LinearLayout or use RelativeLayout (not recommended anymore) in order to achieve this.
        Using ConstraintLayout gives flat hierarchy, which in turn creates a fast and
        responsive user interface for the app.
        Google Developer Doc also recommends to use ConstraintLayout when designing app's
        layouts for optimal performance and ease of use.
        Source: https://android-developers.googleblog.com/2017/08/understanding-performance-benefits-of.html?m=1 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/shoe_logo"
                android:padding="8dp"
                android:src="@drawable/ic_shoe"
                app:layout_constraintBottom_toTopOf="@+id/tvText1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvText1"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions_text1"
                app:layout_constraintBottom_toTopOf="@+id/tvText2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvText1"/>

            <TextView
                android:id="@+id/tvText2"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="16dp"
                android:text="@string/instructions_text2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvText1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvText2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="1.0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>